--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
 .App {
-  text-align: center;
+	text-align: center;
+}
+
+nav {
+	margin-left: auto;
+	margin-right: auto;
+	height: fit-content;
+	width: 100%;
+	margin-bottom: 20px;
+	display: -webkit-inline-box;
+	border-radius: 2px;
+	background-color: rgb(219, 219, 219);
+}
+
+.navLogo {
+	margin-left: 20px;
+}
+
+.navLogo a:focus {
+	outline: none;
+}
+
+.navLogo img {
+	width: 120px;
+}
+
+.navLogo h1 {
+	float: right;
+	color: rgb(0, 0, 0, 0.7);
+}
+
+.navOptions {
+	margin: auto;
+	align-self: flex-start;
+	text-align: center;
+	font-size: 16pt;
+}
+
+.navOptions a {
+	margin: 10px;
+	text-decoration: none;
+	color: rgba(0, 0, 0, 0.7);
+}
+
+.navOptions a:focus,
+.navOptions a:hover {
+	outline: none;
+	transition: all 0.2s ease-in;
+	color: rgb(148, 31, 60);
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+	height: 40vmin;
+	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+	.App-logo {
+		animation: App-logo-spin infinite 20s linear;
+	}
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+	background-color: #282c34;
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	font-size: calc(10px + 2vmin);
+	color: white;
 }
 
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+	from {
+		transform: rotate(0deg);
+	}
+	to {
+		transform: rotate(360deg);
+	}
 }
