--- a/src/App.css
+++ b/src/App.css
@@ -9,38 +9,17 @@ nav {
 	width: 100%;
 	margin-bottom: 20px;
 	display: -webkit-inline-box;
-	border-radius: 2px;
-	background-color: rgb(219, 219, 219);
-}
-
-.navLogo {
-	margin-left: 20px;
-}
-
-.navLogo a:focus {
-	outline: none;
-}
-
-.navLogo img {
-	width: 120px;
-}
-
-.navLogo h1 {
-	float: right;
-	color: rgb(0, 0, 0, 0.7);
 }
 
 .navOptions {
 	margin: auto;
-	align-self: flex-start;
-	text-align: center;
 	font-size: 16pt;
 }
 
 .navOptions a {
-	margin: 10px;
+	margin: 20px;
 	text-decoration: none;
-	color: rgba(0, 0, 0, 0.7);
+	color: rgba(255, 255, 255);
 }
 
 .navOptions a:focus,
@@ -50,37 +29,79 @@ nav {
 	color: rgb(148, 31, 60);
 }
 
-.App-logo {
-	height: 40vmin;
+.cart {
+	height: 50px;
+}
+
+div.container {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	margin: 10px auto;
+	position: relative;
+	text-align: center;
+}
+
+.logo {
+	width: 100%;
+}
+
+.pizza {
+	height: 300px;
 	pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-	.App-logo {
-		animation: App-logo-spin infinite 20s linear;
+	.pizza {
+		animation: pizza-spin infinite 70s linear;
 	}
 }
 
-.App-header {
-	background-color: #282c34;
-	min-height: 100vh;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-	font-size: calc(10px + 2vmin);
-	color: white;
-}
-
-.App-link {
-	color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+@keyframes pizza-spin {
 	from {
 		transform: rotate(0deg);
 	}
 	to {
 		transform: rotate(360deg);
 	}
+}
+
+.phoneNumber {
+	color: rgba(255, 255, 255);
+	width: 100%;
+	font-size: 4em;
+	margin: 50px;
+}
+
+.map-hours {
+	margin-left: auto;
+	margin-right: auto;
+	width: 75%;
+	height: 300px;
+}
+
+.map {
+	margin: auto;
+}
+
+.hours {
+	margin-bottom: 50px;
+}
+
+.hours h3 {
+	margin: 0;
+	color: rgba(255, 255, 255);
+	font-size: 2.5em;
+}
+
+.hours p {
+	margin: auto;
+	color: rgba(255, 255, 255);
+	font-size: 1.5em;
+}
+
+.location h3 {
+	margin-bottom: 5px;
+	color: rgba(255, 255, 255);
+	font-size: 2.5em;
 }
