--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -7,6 +7,11 @@ nav {
 	display: -webkit-inline-box;
 }
 
+h3 {
+	color: rgba(255, 255, 255);
+	font-size: 1.75em;
+}
+
 button {
 	border: 2px solid transparent;
 	border-radius: 5px;
@@ -35,7 +40,7 @@ button:active {
 }
 
 .navOptions a {
-	margin: 17px;
+	margin: 13px;
 	text-decoration: none;
 	color: rgba(255, 255, 255);
 }
@@ -49,6 +54,10 @@ button:active {
 
 .cart {
 	height: 25px;
+}
+
+.cartCount {
+	font-size: 0.75em;
 }
 
 div.container {
@@ -144,9 +153,12 @@ div.container {
 
 .item {
 	width: 150px;
+	color: rgba(255, 255, 255);
 }
 
 .price {
+	color: rgba(255, 255, 255);
+
 	width: 75px;
 }
 
@@ -157,6 +169,11 @@ div.container {
 .add-button button {
 	font-size: 0.6em;
 	padding: 0px 10px;
+}
+
+.remove-button {
+	background-color: rgb(177, 46, 46);
+	font-size: 0.6em;
 }
 
 .checkout button {
