--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -156,10 +156,21 @@ div.container {
 	color: rgba(255, 255, 255);
 }
 
+.item-total {
+	width: 150px;
+	color: rgba(255, 255, 255);
+}
+
 .price {
 	color: rgba(255, 255, 255);
 
 	width: 75px;
+}
+
+.order-name {
+	margin-bottom: 0px;
+	font-style: italic;
+	color: rgba(255, 255, 255);
 }
 
 .add-button {
@@ -181,8 +192,17 @@ div.container {
 	padding: 5px 25px;
 }
 
+.shopping-cart h3 {
+	margin-bottom: 0px;
+}
+.shopping-cart p {
+	font-style: italic;
+	color: rgb(255, 255, 255);
+	margin-bottom: 0px;
+}
+
 .shopping-cart-solo {
-	margin-bottom: 325px;
+	margin-bottom: 350px;
 }
 
 form {
