--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -157,7 +157,8 @@ div.container {
 }
 
 .item-total {
-	width: 150px;
+	margin-left: auto;
+	margin-right: auto;
 	color: rgba(255, 255, 255);
 }
 
@@ -239,6 +240,28 @@ div.container {
 
 .loginForm {
 	margin-bottom: 450px;
+}
+
+.pastOrders {
+	width: 300px;
+	height: auto;
+	text-align: center;
+	margin-top: 0;
+	box-shadow: 0 0 10px rgb(0, 0, 0, 0.7);
+	border-radius: 3px;
+	border-color: rgb(81, 131, 96);
+	border-style: solid;
+	margin-bottom: 50px;
+	margin-left: 20px;
+	margin-right: 20px;
+	display: inline-block;
+}
+
+.pastOrders table {
+	margin-left: auto;
+	margin-right: auto;
+	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 form {
