--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -226,6 +226,7 @@ div.container {
 	margin-bottom: 0px;
 }
 .shopping-cart p {
+	margin-left: 50px;
 	font-style: italic;
 	color: rgb(255, 255, 255);
 	margin-bottom: 0px;
