--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -353,6 +353,41 @@ form a:hover {
 	margin-bottom: 175px;
 }
 
+.alertContainer {
+	width: 100%;
+}
+
+.alert {
+	box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.8);
+	text-align: center;
+	display: none;
+	border-radius: 6px;
+	position: relative;
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 10px;
+	padding: 5px;
+	background-color: rgb(81, 131, 96);
+	color: white;
+	width: 400px;
+}
+
+.closebtn {
+	margin-left: 15px;
+	margin-right: 5px;
+	color: white;
+	font-weight: bold;
+	float: right;
+	font-size: 22px;
+	line-height: 20px;
+	cursor: pointer;
+	transition: 0.3s;
+}
+
+.closebtn:hover {
+	color: #282c34;
+}
+
 footer {
 	font-size: 0.8em;
 	bottom: 0px;
