--- a/src/static/css/App.css
+++ b/src/static/css/App.css
@@ -12,6 +12,11 @@ h3 {
 	font-size: 1.75em;
 }
 
+a {
+	text-decoration: none;
+	color: rgba(255, 255, 255);
+}
+
 button {
 	border: 2px solid transparent;
 	border-radius: 5px;
@@ -358,11 +363,10 @@ form a:hover {
 }
 
 .alert {
-	box-shadow: 0px 0px 10px rgb(0, 0, 0, 0.8);
+	box-shadow: 0px 0px 50px rgb(0, 0, 0, 0.8);
 	text-align: center;
 	display: none;
 	border-radius: 6px;
-	position: relative;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 10px;
